--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Peridot CoZ Android</string>
+    <string name="app_name">peridot-coz-android</string>
 </resources>
